hphp/hack/test/typecheck/finally_naming.php.exp
File "finally_naming.php", line 24, characters 10-11:
Variable $b is undefined, or not always defined (did you mean $a instead?) (Naming[2050])
